[package]
name = "bria"
version = "0.1.52-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
sqlx-ledger = { version = "0.10.0", features = ["otel"] }

anyhow = "1.0.75"
bitcoincore-rpc = "0.16.0"
clap = { version = "4.3", features = ["derive", "env"] }
chrono = { version = "0.4.26", features = ["clock", "serde"], default-features = false }
derive_builder = "0.12.0"
opentelemetry-jaeger = { version = "0.19.0", features = ["rt-tokio"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "rust_decimal", "uuid", "chrono"] }
sqlxmq = { git = "https://github.com/GaloyMoney/sqlxmq", rev = "f03f73c", default-features = false, features = ["runtime-tokio-rustls"] }
tokio = { version = "1.30", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic = "0.9"
tonic-health = "0.9"
rust_decimal = "1.31"
tracing = "0.1.37"
tracing-opentelemetry = "0.20.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
prost = "0.11"
prost-wkt-types = { version = "0.4.2", features = ["vendored-protoc"]}
rust_decimal_macros = "1.31"
rusty-money = "0.4.1"
thiserror = "1.0.47"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
futures = "0.3.27"
url = "2.4.0"
rand = "0.8.5"
bdk = "0.28.2"
lazy_static = "1.4.0"
opentelemetry = "0.20.0"
serde_with = "3.2.0"
electrum-client = "0.12.0"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
tonic_lnd = { version = "0.5.0", features = ["tracing"] }
async-trait = "0.1"
base64 = "0.21.1"
tempfile = "3.7.1"
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
regex = "1.9.3"

[build-dependencies]
protobuf-src = { version = "1.1.0" }
tonic-build = { version = "0.9", features = ["prost"] }
