[package]
name = "bria"
version = "0.1.72-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
sqlx-ledger = { version = "0.11.2", features = ["otel"] }

anyhow = "1.0.75"
bitcoincore-rpc = "0.16.0"
clap = { version = "4.4", features = ["derive", "env"] }
chrono = { version = "0.4.31", features = ["clock", "serde"], default-features = false }
derive_builder = "0.12.0"
opentelemetry-otlp = { version = "0.14.0", features = ["http-proto", "reqwest-client"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "rust_decimal", "uuid", "chrono"] }
sqlxmq = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls"] }
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic = "0.10.2"
tonic-health = "0.10.2"
rust_decimal = "1.33"
tracing = "0.1.40"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
prost = "0.12"
prost-wkt-types = { version = "0.5", features = ["vendored-protoc"]}
rust_decimal_macros = "1.32"
rusty-money = "0.4.1"
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
futures = "0.3.29"
url = "2.5.0"
rand = "0.8.5"
bdk = "0.28.2"
lazy_static = "1.4.0"
opentelemetry = { version = "0.21.0" }
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
serde_with = "3.3.0"
electrum-client = "0.12.0"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
tonic_lnd = { version = "0.5.0", features = ["tracing"] }
async-trait = "0.1"
base64 = "0.21.5"
tempfile = "3.8.1"
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
regex = "1.10.2"

[dev-dependencies]
serial_test = "*"

[build-dependencies]
protobuf-src = { version = "1.1.0" }
tonic-build = { version = "0.10.2", features = ["prost"] }
